# Kc-Model

./: .gitignore  README.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 0320e22b-3dc9-4a99-8e91-0db9fe104864.json  211cad57-25f7-4501-8eba-c8cf4d618ceb.json  6fbe9c10-acd3-4ce1-8e29-60a2c3a12dc9.json  7491eb20-4dd8-4b95-a4d9-34f3210880e1.json  93e247d6-854d-4c50-b0db-0e84efecf242.json  b1ef727c-471e-4c25-982a-87d06fb08766.json  ffa98d49-8dd3-4829-b360-2aa209833e82.json
.omc/state/: agent-replay-7491eb20-4dd8-4b95-a4d9-34f3210880e1.jsonl  agent-replay-ffa98d49-8dd3-4829-b360-2aa209833e82.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
apps/KcactVision/: README.md
apps/kcact-miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: mvp_hebei_winter_wheat_2021_2023.yaml
data/metadata/: ncp_winter_wheat_regions_2021_2025.csv
docs/: handover.md  mvp-dataflow.md  phase1_crop_mask_method_and_region_list.md  phase1_gee_hebei_mask_runbook.md  phase1_gee_hebei_rf_runbook.md  phase1_python_gee_hebei_rf_runbook.md  phase1_python_hebei_candidate_runbook.md  phase1_rf_sample_schema.md  phase2_kcact_pipeline_runbook.md
docs/plans/: kcact_data_scaling_plan.md  (+1 more)
gee/: README.md  export_hebei_winter_wheat_mask_2021_2025.js
tests/: test_et0.py  test_kcact_builder.py
(+313 files in other folders)
